:art: CSS `:hover` fix for _bell_, updated submodule...
**Edits**

`assets/css/main.css` file, now when notice is hovered over the icon is made _invisible_

`README.md` file, minor content removal as there will soon be a separate repository for reducing redundant repetition.

`assets/javascript_modules/browser-storage` submodule, tracking latest revision of `master` branch

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,6 +86,13 @@ body {
   max-height: unset;
 }
 
+.privacy_notice__checkbox:checked ~ .container__privacy_notice:hover::after {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+
 .privacy_notice__checkbox:checked ~ .container__privacy_notice:hover * {
   visibility: visible;
   opacity: 1;
